# Dense_HODLR

./: CMakeLists.txt  LICENSE.md  README.md  _eigen_pa_sti_x_support_8hpp_source.html  _h_o_d_l_r___matrix_8hpp_source.html  _h_o_d_l_r___tree_8hpp_source.html  annotated.html  class_h_o_d_l_r___matrix-members.html  class_h_o_d_l_r___matrix.html  class_h_o_d_l_r___tree-members.html  class_h_o_d_l_r___tree.html  classes.html  classkernel_matrix-members.html  classkernel_matrix.html  classperturb_i-members.html  classperturb_i.html  classrec_l_u___factor_tree-members.html  classrec_l_u___factor_tree.html  classuser___index_tree-members.html  classuser___index_tree.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  group___constructors.html  group___default.html  group___dense.html  group___preallocated.html  group__def_construct.html  group__dense_construct.html  group__kernel_construct.html  group__sparse_construct.html  helper_functions_8hpp_source.html  index.html  kernel_8hpp_source.html  low_rank_8hpp_source.html  matrix_i_o_8hpp_source.html  modules.html  perturb_i_8hpp_source.html  (+8 more)
IML/include/: Eigen_IML_Matrix.hpp  Eigen_IML_Vector.hpp  diag_IML_Precond.hpp  diag_IML_Precond.hpp~  diag_IML_Precond_sparse.hpp  fastSparse_IML_Precond.hpp  gmres.h  gmres.h~
IML/test/: CMakeLists.txt  IML_Test  Makefile  a.out  test.cpp
benchmarks/: ACA_Blade_PostProcess.py  ACA_PostProcess.py  CMakeLists.txt  benchmarks.cpp  boundaryLR_PostProcess.py  genereteTexPlots.py
cmake/: FindEigen.cmake  FindPastix.cmake
include/: EigenPaStiXSupport.hpp  HODLR_Matrix.hpp  HODLR_Tree.hpp  helperFunctions.hpp  kernel.hpp  lowRank.hh  lowRank.hpp  matrixIO.hpp  perturbI.hpp  recLU_FactorTree.hpp  user_IndexTree.hpp
rigidBody/: CMakeLists.txt  MobFunctions.h  README.md  lattice.cpp  singleBody.cpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_3.js  classes_4.js  functions_0.js  groups_0.js  groups_2.js  search.js
src/: CMakeLists.txt  HODLR_Matrix.cpp  HODLR_Tree.cpp  helperFunctions.cpp  kernel.cpp  lowRank.cpp  matrixIO.cpp  perturbI.cpp  recLU_FactorTree.cpp  user_IndexTree.cpp
test/: CMakeLists.txt  test.cpp
